--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,5 @@
 	"background": {
 		"service_worker": "background.js"
 	},
-	"permissions": ["storage", "tabs"]
+	"permissions": ["storage", "tabs", "notifications"]
 }
